# cpp-project-init

./: .gitignore  Cargo.toml  justfile
examples/: gtest.toml  raylib.toml
src/: cli.rs  cmake.rs  generators.rs  main.rs  project.rs  strings.rs  tree.rs  utils.rs
src/cmake/: libs.rs  main.rs  mod.rs  project.rs  src.rs  templates.rs  tests.rs
src/default/sources/: lib.cpp  lib.hpp  main.cpp  test_greet_gtest.cpp
src/generators/: cmake.rs
src/generators/cmake/: file.rs  libs.rs  main.rs  src.rs  testing.rs
templates/cmake/: lib.txt  main.txt  src.txt  tests.txt
